--- a/VKapp/Podfile
+++ b/VKapp/Podfile
@@ -9,6 +9,6 @@ target 'VKapp' do
 	pod 'RealmSwift'
   pod 'Firebase/Core'
   pod 'Firebase/Database'
-  
-	
+  pod "PromiseKit", "~> 6.8"
+  	
 end
